# ar-ms-baseline

./: README.md  collator.py  dataset.py  evaluate.py  inference.py  pyproject.toml  train.py  utils.py
configs/: default.yaml
src/: __init__.py  collator.py  dataset.py  utils.py
