[project]
name = "ar-ms-baseline"
version = "0.1.0"
description = "baseline for NAKBA NLP AR MS Shared Task 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.57.0",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "flash-attn>=2.7.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
